docs: add Swagger/OpenApi configs